[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/textFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://tilesets/int_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/menu/MenuTab.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menu/SkillRow.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/menu/CharacterMenu.gd" type="Script" id=5]
[ext_resource path="res://scenes/menu/FeatRow.tscn" type="PackedScene" id=6]
[ext_resource path="res://themes/LabelTheme.tres" type="Theme" id=7]
[ext_resource path="res://scenes/menu/StatusRow.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/menu/MenuScroller.tscn" type="PackedScene" id=9]

[sub_resource type="GDScript" id=1]
script/source = "extends TileMap

onready var label:Label = get_node(\"TextContainer/Label\")

func _ready():
	label.text = name

func setActive():
	label.add_color_override(\"font_color\", Colors.white)
	show_behind_parent = false

func setInactive():
	label.add_color_override(\"font_color\", Colors.shade3)
	show_behind_parent = true
"

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D

onready var selected = get_node(\"Selected\")
onready var nameLabel = get_node(\"TextContainer/Name\")
onready var rankLabel = get_node(\"TextContainer/Rank\")

func _ready():
	nameLabel.text = name

func setValue(rank, mastery):
	var result = \".\"
	if mastery > 0:
		result += \"..\"
	if mastery > 1:
		result += \"..\"
	for r in range(rank):
		result[r] = '*'
	rankLabel.text = result

func select():
	selected.visible = true

func unselect():
	selected.visible = false
"

[node name="CharacterMenu" type="Node2D"]
position = Vector2( 45, 0 )
script = ExtResource( 5 )

[node name="Tabs" type="TileMap" parent="."]
position = Vector2( 0, 18 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 9, 9 )
format = 1
tile_data = PoolIntArray( 65536, 1, 0, 65537, 1, 1, 65538, 1, 1, 65539, 1, 1, 65540, 1, 1, 65541, 1, 1, 65542, 1, 1, 65543, 1, 1, 65544, 1, 1, 65545, 1, 1, 65546, 1, 1, 65547, 1, 1, 65548, 1, 1, 65549, 1, 1, 65550, 1, 2, 131072, 1, 65536, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65537, 131078, 1, 65537, 131079, 1, 65537, 131080, 1, 65537, 131081, 1, 65537, 131082, 1, 65537, 131083, 1, 65537, 131084, 1, 65537, 131085, 1, 65537, 131086, 1, 65538, 196608, 1, 65536, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65537, 196614, 1, 65537, 196615, 1, 65537, 196616, 1, 65537, 196617, 1, 65537, 196618, 1, 65537, 196619, 1, 65537, 196620, 1, 65537, 196621, 1, 65537, 196622, 1, 65538, 196623, 3, 0, 196624, 3, 1, 196625, 3, 1, 196626, 3, 1, 196627, 3, 1, 196628, 3, 1, 196629, 3, 1, 196630, 3, 1, 196631, 3, 1, 196632, 3, 1, 196633, 3, 1, 196634, 3, 1, 196635, 3, 2, 262144, 1, 65536, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 65537, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65537, 262156, 1, 65537, 262157, 1, 65537, 262158, 1, 65538, 262159, 3, 65536, 262160, 3, 65537, 262161, 3, 65537, 262162, 3, 65537, 262163, 3, 65537, 262164, 3, 65537, 262165, 3, 65537, 262166, 3, 65537, 262167, 3, 65537, 262168, 3, 65537, 262169, 3, 65537, 262170, 3, 65537, 262171, 3, 65538, 327680, 1, 65536, 327681, 1, 65537, 327682, 1, 65537, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65537, 327686, 1, 65537, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 65537, 327691, 1, 65537, 327692, 1, 65537, 327693, 1, 65537, 327694, 1, 65538, 327695, 3, 65536, 327696, 3, 65537, 327697, 3, 65537, 327698, 3, 65537, 327699, 3, 65537, 327700, 3, 65537, 327701, 3, 65537, 327702, 3, 65537, 327703, 3, 65537, 327704, 3, 65537, 327705, 3, 65537, 327706, 3, 65537, 327707, 3, 65538, 393216, 1, 65536, 393217, 1, 65537, 393218, 1, 65537, 393219, 1, 65537, 393220, 1, 65537, 393221, 1, 65537, 393222, 1, 65537, 393223, 1, 65537, 393224, 1, 65537, 393225, 1, 65537, 393226, 1, 65537, 393227, 1, 65537, 393228, 1, 65537, 393229, 1, 65537, 393230, 1, 65538, 393231, 3, 65536, 393232, 3, 65537, 393233, 3, 65537, 393234, 3, 65537, 393235, 3, 65537, 393236, 3, 65537, 393237, 3, 65537, 393238, 3, 65537, 393239, 3, 65537, 393240, 3, 65537, 393241, 3, 65537, 393242, 3, 65537, 393243, 3, 65538, 458752, 1, 65536, 458753, 1, 65537, 458754, 1, 65537, 458755, 1, 65537, 458756, 1, 65537, 458757, 1, 65537, 458758, 1, 65537, 458759, 1, 65537, 458760, 1, 65537, 458761, 1, 65537, 458762, 1, 65537, 458763, 1, 65537, 458764, 1, 65537, 458765, 1, 65537, 458766, 1, 65538, 458767, 3, 65536, 458768, 3, 65537, 458769, 3, 65537, 458770, 3, 65537, 458771, 3, 65537, 458772, 3, 65537, 458773, 3, 65537, 458774, 3, 65537, 458775, 3, 65537, 458776, 3, 65537, 458777, 3, 65537, 458778, 3, 65537, 458779, 3, 65538, 524288, 1, 65536, 524289, 1, 65537, 524290, 1, 65537, 524291, 1, 65537, 524292, 1, 65537, 524293, 1, 65537, 524294, 1, 65537, 524295, 1, 65537, 524296, 1, 65537, 524297, 1, 65537, 524298, 1, 65537, 524299, 1, 65537, 524300, 1, 65537, 524301, 1, 65537, 524302, 1, 65538, 524303, 3, 65536, 524304, 3, 65537, 524305, 3, 65537, 524306, 3, 65537, 524307, 3, 65537, 524308, 3, 65537, 524309, 3, 65537, 524310, 3, 65537, 524311, 3, 65537, 524312, 3, 65537, 524313, 3, 65537, 524314, 3, 65537, 524315, 3, 65538, 589824, 1, 65536, 589825, 1, 65537, 589826, 1, 65537, 589827, 1, 65537, 589828, 1, 65537, 589829, 1, 65537, 589830, 1, 65537, 589831, 1, 65537, 589832, 1, 65537, 589833, 1, 65537, 589834, 1, 65537, 589835, 1, 65537, 589836, 1, 65537, 589837, 1, 65537, 589838, 1, 65538, 589839, 3, 65536, 589840, 3, 65537, 589841, 3, 65537, 589842, 3, 65537, 589843, 3, 65537, 589844, 3, 65537, 589845, 3, 65537, 589846, 3, 65537, 589847, 3, 65537, 589848, 3, 65537, 589849, 3, 65537, 589850, 3, 65537, 589851, 3, 65538, 655360, 1, 65536, 655361, 1, 65537, 655362, 1, 65537, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 65537, 655366, 1, 65537, 655367, 1, 65537, 655368, 1, 65537, 655369, 1, 65537, 655370, 1, 65537, 655371, 1, 65537, 655372, 1, 65537, 655373, 1, 65537, 655374, 1, 65538, 655375, 3, 65536, 655376, 3, 65537, 655377, 3, 65537, 655378, 3, 65537, 655379, 3, 65537, 655380, 3, 65537, 655381, 3, 65537, 655382, 3, 65537, 655383, 3, 65537, 655384, 3, 65537, 655385, 3, 65537, 655386, 3, 65537, 655387, 3, 65538, 720896, 1, 65536, 720897, 1, 65537, 720898, 1, 65537, 720899, 1, 65537, 720900, 1, 65537, 720901, 1, 65537, 720902, 1, 65537, 720903, 1, 65537, 720904, 1, 65537, 720905, 1, 65537, 720906, 1, 65537, 720907, 1, 65537, 720908, 1, 65537, 720909, 1, 65537, 720910, 1, 65538, 720911, 3, 65536, 720912, 3, 65537, 720913, 3, 65537, 720914, 3, 65537, 720915, 3, 65537, 720916, 3, 65537, 720917, 3, 65537, 720918, 3, 65537, 720919, 3, 65537, 720920, 3, 65537, 720921, 3, 65537, 720922, 3, 65537, 720923, 3, 65538, 786432, 1, 65536, 786433, 1, 65537, 786434, 1, 65537, 786435, 1, 65537, 786436, 1, 65537, 786437, 1, 65537, 786438, 1, 65537, 786439, 1, 65537, 786440, 1, 65537, 786441, 1, 65537, 786442, 1, 65537, 786443, 1, 65537, 786444, 1, 65537, 786445, 1, 65537, 786446, 1, 65538, 786447, 3, 65536, 786448, 3, 65537, 786449, 3, 65537, 786450, 3, 65537, 786451, 3, 65537, 786452, 3, 65537, 786453, 3, 65537, 786454, 3, 65537, 786455, 3, 65537, 786456, 3, 65537, 786457, 3, 65537, 786458, 3, 65537, 786459, 3, 65538, 851968, 1, 65536, 851969, 1, 65537, 851970, 1, 65537, 851971, 1, 65537, 851972, 1, 65537, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65537, 851981, 1, 65537, 851982, 1, 65538, 851983, 3, 131072, 851984, 3, 131073, 851985, 3, 131073, 851986, 3, 131073, 851987, 3, 131073, 851988, 3, 131073, 851989, 3, 131073, 851990, 3, 131073, 851991, 3, 131073, 851992, 3, 131073, 851993, 3, 131073, 851994, 3, 131073, 851995, 3, 131074, 917504, 1, 65536, 917505, 1, 65537, 917506, 1, 65537, 917507, 1, 65537, 917508, 1, 65537, 917509, 1, 65537, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 1, 65537, 917517, 1, 65537, 917518, 1, 65538, 983040, 1, 65536, 983041, 1, 65537, 983042, 1, 65537, 983043, 1, 65537, 983044, 1, 65537, 983045, 1, 65537, 983046, 1, 65537, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 1, 65537, 983053, 1, 65537, 983054, 1, 65538, 1048576, 1, 65536, 1048577, 1, 65537, 1048578, 1, 65537, 1048579, 1, 65537, 1048580, 1, 65537, 1048581, 1, 65537, 1048582, 1, 65537, 1048583, 1, 65537, 1048584, 1, 65537, 1048585, 1, 65537, 1048586, 1, 65537, 1048587, 1, 65537, 1048588, 1, 65537, 1048589, 1, 65537, 1048590, 1, 65538, 1114112, 1, 131072, 1114113, 1, 131073, 1114114, 1, 131073, 1114115, 1, 131073, 1114116, 1, 131073, 1114117, 1, 131073, 1114118, 1, 131073, 1114119, 1, 131073, 1114120, 1, 131073, 1114121, 1, 131073, 1114122, 1, 131073, 1114123, 1, 131073, 1114124, 1, 131073, 1114125, 1, 131073, 1114126, 1, 131074 )

[node name="Skills" parent="Tabs" instance=ExtResource( 3 )]
script = SubResource( 1 )

[node name="Feats" parent="Tabs" instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( 45, 0 )
script = SubResource( 1 )

[node name="Statuses" parent="Tabs" instance=ExtResource( 3 )]
show_behind_parent = true
position = Vector2( 90, 0 )
script = SubResource( 1 )

[node name="LargeDescriptorPanel" type="TileMap" parent="."]
position = Vector2( 0, 36 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 9, 9 )
format = 1
tile_data = PoolIntArray( -65521, 3, 0, -65520, 3, 1, -65519, 3, 1, -65518, 3, 1, -65517, 3, 1, -65516, 3, 1, -65515, 3, 1, -65514, 3, 1, -65513, 3, 1, -65512, 3, 1, -65511, 3, 1, -65510, 3, 1, -65509, 3, 1, -65508, 3, 1, -65507, 3, 1, -65506, 3, 1, -65505, 3, 2, 15, 3, 65536, 16, 3, 65537, 17, 3, 65537, 18, 3, 65537, 19, 3, 65537, 20, 3, 65537, 21, 3, 65537, 22, 3, 65537, 23, 3, 65537, 24, 3, 65537, 25, 3, 65537, 26, 3, 65537, 27, 3, 65537, 28, 3, 65537, 29, 3, 65537, 30, 3, 65537, 31, 3, 65538, 65551, 3, 65536, 65552, 3, 65537, 65553, 3, 65537, 65554, 3, 65537, 65555, 3, 65537, 65556, 3, 65537, 65557, 3, 65537, 65558, 3, 65537, 65559, 3, 65537, 65560, 3, 65537, 65561, 3, 65537, 65562, 3, 65537, 65563, 3, 65537, 65564, 3, 65537, 65565, 3, 65537, 65566, 3, 65537, 65567, 3, 65538, 131087, 3, 65536, 131088, 3, 65537, 131089, 3, 65537, 131090, 3, 65537, 131091, 3, 65537, 131092, 3, 65537, 131093, 3, 65537, 131094, 3, 65537, 131095, 3, 65537, 131096, 3, 65537, 131097, 3, 65537, 131098, 3, 65537, 131099, 3, 65537, 131100, 3, 65537, 131101, 3, 65537, 131102, 3, 65537, 131103, 3, 65538, 196623, 3, 65536, 196624, 3, 65537, 196625, 3, 65537, 196626, 3, 65537, 196627, 3, 65537, 196628, 3, 65537, 196629, 3, 65537, 196630, 3, 65537, 196631, 3, 65537, 196632, 3, 65537, 196633, 3, 65537, 196634, 3, 65537, 196635, 3, 65537, 196636, 3, 65537, 196637, 3, 65537, 196638, 3, 65537, 196639, 3, 65538, 262159, 3, 65536, 262160, 3, 65537, 262161, 3, 65537, 262162, 3, 65537, 262163, 3, 65537, 262164, 3, 65537, 262165, 3, 65537, 262166, 3, 65537, 262167, 3, 65537, 262168, 3, 65537, 262169, 3, 65537, 262170, 3, 65537, 262171, 3, 65537, 262172, 3, 65537, 262173, 3, 65537, 262174, 3, 65537, 262175, 3, 65538, 327695, 3, 65536, 327696, 3, 65537, 327697, 3, 65537, 327698, 3, 65537, 327699, 3, 65537, 327700, 3, 65537, 327701, 3, 65537, 327702, 3, 65537, 327703, 3, 65537, 327704, 3, 65537, 327705, 3, 65537, 327706, 3, 65537, 327707, 3, 65537, 327708, 3, 65537, 327709, 3, 65537, 327710, 3, 65537, 327711, 3, 65538, 393231, 3, 65536, 393232, 3, 65537, 393233, 3, 65537, 393234, 3, 65537, 393235, 3, 65537, 393236, 3, 65537, 393237, 3, 65537, 393238, 3, 65537, 393239, 3, 65537, 393240, 3, 65537, 393241, 3, 65537, 393242, 3, 65537, 393243, 3, 65537, 393244, 3, 65537, 393245, 3, 65537, 393246, 3, 65537, 393247, 3, 65538, 458767, 3, 65536, 458768, 3, 65537, 458769, 3, 65537, 458770, 3, 65537, 458771, 3, 65537, 458772, 3, 65537, 458773, 3, 65537, 458774, 3, 65537, 458775, 3, 65537, 458776, 3, 65537, 458777, 3, 65537, 458778, 3, 65537, 458779, 3, 65537, 458780, 3, 65537, 458781, 3, 65537, 458782, 3, 65537, 458783, 3, 65538, 524303, 3, 65536, 524304, 3, 65537, 524305, 3, 65537, 524306, 3, 65537, 524307, 3, 65537, 524308, 3, 65537, 524309, 3, 65537, 524310, 3, 65537, 524311, 3, 65537, 524312, 3, 65537, 524313, 3, 65537, 524314, 3, 65537, 524315, 3, 65537, 524316, 3, 65537, 524317, 3, 65537, 524318, 3, 65537, 524319, 3, 65538, 589839, 3, 65536, 589840, 3, 65537, 589841, 3, 65537, 589842, 3, 65537, 589843, 3, 65537, 589844, 3, 65537, 589845, 3, 65537, 589846, 3, 65537, 589847, 3, 65537, 589848, 3, 65537, 589849, 3, 65537, 589850, 3, 65537, 589851, 3, 65537, 589852, 3, 65537, 589853, 3, 65537, 589854, 3, 65537, 589855, 3, 65538, 655375, 3, 65536, 655376, 3, 65537, 655377, 3, 65537, 655378, 3, 65537, 655379, 3, 65537, 655380, 3, 65537, 655381, 3, 65537, 655382, 3, 65537, 655383, 3, 65537, 655384, 3, 65537, 655385, 3, 65537, 655386, 3, 65537, 655387, 3, 65537, 655388, 3, 65537, 655389, 3, 65537, 655390, 3, 65537, 655391, 3, 65538, 720911, 3, 65536, 720912, 3, 65537, 720913, 3, 65537, 720914, 3, 65537, 720915, 3, 65537, 720916, 3, 65537, 720917, 3, 65537, 720918, 3, 65537, 720919, 3, 65537, 720920, 3, 65537, 720921, 3, 65537, 720922, 3, 65537, 720923, 3, 65537, 720924, 3, 65537, 720925, 3, 65537, 720926, 3, 65537, 720927, 3, 65538, 786447, 3, 65536, 786448, 3, 65537, 786449, 3, 65537, 786450, 3, 65537, 786451, 3, 65537, 786452, 3, 65537, 786453, 3, 65537, 786454, 3, 65537, 786455, 3, 65537, 786456, 3, 65537, 786457, 3, 65537, 786458, 3, 65537, 786459, 3, 65537, 786460, 3, 65537, 786461, 3, 65537, 786462, 3, 65537, 786463, 3, 65538, 851983, 3, 65536, 851984, 3, 65537, 851985, 3, 65537, 851986, 3, 65537, 851987, 3, 65537, 851988, 3, 65537, 851989, 3, 65537, 851990, 3, 65537, 851991, 3, 65537, 851992, 3, 65537, 851993, 3, 65537, 851994, 3, 65537, 851995, 3, 65537, 851996, 3, 65537, 851997, 3, 65537, 851998, 3, 65537, 851999, 3, 65538, 917519, 3, 131072, 917520, 3, 131073, 917521, 3, 131073, 917522, 3, 131073, 917523, 3, 131073, 917524, 3, 131073, 917525, 3, 131073, 917526, 3, 131073, 917527, 3, 131073, 917528, 3, 131073, 917529, 3, 131073, 917530, 3, 131073, 917531, 3, 131073, 917532, 3, 131073, 917533, 3, 131073, 917534, 3, 131073, 917535, 3, 131074 )

[node name="SkillsScreen" type="Node2D" parent="."]

[node name="SkillsList" type="Node2D" parent="SkillsScreen"]
position = Vector2( 9, 33 )

[node name="Combat" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 9 )
script = SubResource( 2 )

[node name="Armour" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 19 )
script = SubResource( 2 )

[node name="Evocation" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 29 )
script = SubResource( 2 )

[node name="Enchantment" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 39 )
script = SubResource( 2 )

[node name="Divination" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 49 )
script = SubResource( 2 )

[node name="Abjuration" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 59 )
script = SubResource( 2 )

[node name="Conjuration" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 69 )
script = SubResource( 2 )

[node name="PHY saves" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 79 )
script = SubResource( 2 )

[node name="WIL saves" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 89 )
script = SubResource( 2 )

[node name="Perception" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 99 )
script = SubResource( 2 )

[node name="Thievery" parent="SkillsScreen/SkillsList" instance=ExtResource( 4 )]
position = Vector2( 18, 109 )
script = SubResource( 2 )

[node name="TextContainer" type="Node2D" parent="SkillsScreen"]
position = Vector2( 72, 153 )
scale = Vector2( 0.25, 0.25 )

[node name="Label" type="Label" parent="SkillsScreen/TextContainer"]
margin_right = 182.0
margin_bottom = 36.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.843137, 0.709804, 0.215686, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Skill points:"

[node name="RemainingPoints" type="Label" parent="SkillsScreen/TextContainer"]
margin_left = 180.0
margin_right = 216.0
margin_bottom = 35.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.843137, 0.709804, 0.215686, 1 )
custom_fonts/font = ExtResource( 1 )
text = "3"
align = 1

[node name="Commands" type="RichTextLabel" parent="SkillsScreen/TextContainer"]
margin_left = -252.0
margin_top = 36.0
margin_right = 216.0
margin_bottom = 76.0
theme = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]ds[/center]"
text = "ds"

[node name="FeatsScreen" type="Node2D" parent="."]
visible = false

[node name="FeatsList" type="Node2D" parent="FeatsScreen"]

[node name="FeatRow" parent="FeatsScreen/FeatsList" instance=ExtResource( 6 )]
position = Vector2( 27, 45 )

[node name="FeatRow2" parent="FeatsScreen/FeatsList" instance=ExtResource( 6 )]
position = Vector2( 27, 63 )

[node name="FeatRow3" parent="FeatsScreen/FeatsList" instance=ExtResource( 6 )]
position = Vector2( 27, 81 )

[node name="FeatRow4" parent="FeatsScreen/FeatsList" instance=ExtResource( 6 )]
position = Vector2( 27, 99 )

[node name="FeatRow5" parent="FeatsScreen/FeatsList" instance=ExtResource( 6 )]
position = Vector2( 27, 117 )

[node name="TextContainer" type="Node2D" parent="FeatsScreen"]
scale = Vector2( 0.25, 0.25 )

[node name="ChooseFeat" type="Label" parent="FeatsScreen/TextContainer"]
margin_left = 36.0
margin_top = 576.0
margin_right = 504.0
margin_bottom = 612.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.843137, 0.709804, 0.215686, 1 )
text = "New feat available !"
align = 1
autowrap = true

[node name="Commands" type="RichTextLabel" parent="FeatsScreen/TextContainer"]
margin_left = 36.0
margin_top = 648.0
margin_right = 504.0
margin_bottom = 688.0
theme = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]ds[/center]"
text = "ds"

[node name="StatusesScreen" type="Node2D" parent="."]
visible = false

[node name="StatusesList" type="Node2D" parent="StatusesScreen"]
position = Vector2( 9, 36 )

[node name="StatusRow" parent="StatusesScreen/StatusesList" instance=ExtResource( 8 )]
position = Vector2( 0, 9 )

[node name="StatusRow2" parent="StatusesScreen/StatusesList" instance=ExtResource( 8 )]
position = Vector2( 0, 27 )

[node name="StatusRow3" parent="StatusesScreen/StatusesList" instance=ExtResource( 8 )]
position = Vector2( 0, 45 )

[node name="StatusRow4" parent="StatusesScreen/StatusesList" instance=ExtResource( 8 )]
position = Vector2( 0, 63 )

[node name="StatusRow5" parent="StatusesScreen/StatusesList" instance=ExtResource( 8 )]
position = Vector2( 0, 81 )

[node name="StatusRow6" parent="StatusesScreen/StatusesList" instance=ExtResource( 8 )]
position = Vector2( 0, 99 )

[node name="MenuScroller" parent="StatusesScreen" instance=ExtResource( 9 )]
position = Vector2( 119, 53 )
length = 91

[node name="TextContainer" type="Node2D" parent="StatusesScreen"]
scale = Vector2( 0.25, 0.25 )

[node name="Commands" type="RichTextLabel" parent="StatusesScreen/TextContainer"]
margin_left = 36.0
margin_top = 648.0
margin_right = 504.0
margin_bottom = 688.0
theme = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]ds[/center]"
text = "ds"

[node name="TextContainer" type="Node2D" parent="."]
position = Vector2( 144, 55 )
scale = Vector2( 0.25, 0.25 )

[node name="Description" type="Label" parent="TextContainer"]
margin_top = -76.0
margin_right = 540.0
margin_bottom = 428.0
theme = ExtResource( 7 )
valign = 1
autowrap = true

[node name="Title" type="Label" parent="TextContainer"]
margin_left = -540.0
margin_top = -184.0
margin_right = 396.0
margin_bottom = -148.0
theme = ExtResource( 7 )
text = "Character Menu"
align = 1
valign = 1
autowrap = true
